--- a/MENDITTZO-Backend/build.gradle
+++ b/MENDITTZO-Backend/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    // 소셜 로그인 시 필요한 서버 -> 외부 API HTTP 요청 처리
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.3.5'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
