--- a/MENDITTZO-Backend/src/main/resources/application.yml
+++ b/MENDITTZO-Backend/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
       naming:
         physical-strategy:
           org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+kakao:
+  client_id:
+    rest_api_key: ${kakao.client_id.rest_api_key}
+  redirect_uri: ${kakao.redirect_uri}
